syntax = "proto3";

option csharp_namespace = "GrpcServer";

package user;

service User {
	rpc CreateAccount (AccountCreationRequest) returns (AccountCreationReply);
	rpc Login (LoginRequest) returns (LoginReply);
}

message AccountCreationRequest {
	string name = 1;
	string email = 2;
	string password = 3;
}

message AccountCreationReply {
	bool success = 1;
	string message = 2;
}

message LoginRequest {
	string email = 1;
	string password = 2;
}

message LoginReply {
	bool success = 1;
	string message = 2;
}